[SR-7562] inheriting discardableResult attribute for constructors. (#16699)

Simply checking if constructor has the discardableResult attribute set.